--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,40 @@
+.footer {
+	padding: 17px 0;
+
+}
+
 .wrapper {
 	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 30px;
+}
+
+.contacts {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.social {
+	display: flex;
+	gap: 8px;
+	padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.link {
+	color: #00C78B;
+	transition: color .3s ease-in-out;
+}
+
+.link:hover {
+	color: #04ffb3;
+}
+
+@media (min-width: 480px) {
+	.wrapper {
+		flex-direction: column-reverse;
+	}
 }
