--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,5 @@
 .footer {
 	padding: 17px 0;
-
 }
 
 .wrapper {
@@ -30,10 +29,10 @@
 }
 
 .link:hover {
-	color: #04ffb3;
+	color: #308b70;
 }
 
-@media (min-width: 480px) {
+@media (max-width: 480px) {
 	.wrapper {
 		flex-direction: column-reverse;
 	}
